# uniform-error

./: ChangeLog.md  README.md  cabal.project  oldnotes.txt  package.yaml  stack.yaml  uniform-error.cabal
Uniform/: Error.hs  NoticeLevel.hs
test/: Testing.hs
test/Uniform/: Error_test.hs
tests/Uniform/: Error_test.hs
