name: uniform-error
version: 0.0.9.7
cabal-version: >=1.22
build-type: Simple
license: GPL
license-file: GPL_3
maintainer: Andrew U. Frank <andrewufrank@gmail.com>
author: Andrew Frank
category: Error Exception
synopsis: handling of errors in the uniform framework
description: a close to minimal package to handle errors and exception
    in a simple but flexible way to reduce complexity of Haskell.
        0.0.9 fixed the callIO to really get the errors in IO

source-repository head
    type: git
    location: https://github.com/andrewufrank/uniform-error.git

library
    build-depends:
        base >=4.8 && <= 5
        , monads-tf
        , exceptions
--        , monad-exception
--        , layers
        , safe
        , uniform-strings
        , HTF
        , safe
    exposed-modules:
        Uniform.Error
--        Data.Strings
--    -- for testing, afterwards include in test-suite
--        Data.StringConversion
--        Data.StringUtilities
--        Data.StringInfix

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:

--Test-Suite errorTestAuto
--    type:       exitcode-stdio-1.0
--    main-is:    UniformErrorTest.hs
--    build-depends: base, HTF
--        , uniform-strings
--        , uniform-error
--    default-language: Haskell2010
--    hs-source-dirs: srcexe
--    other-modules:

Test-Suite errortest
    type:       exitcode-stdio-1.0
    build-depends:  base -any
        , HTF
--                    bytestring -any, mtl,
--                   text -any, utf8-string -any
       , uniform-strings
       , uniform-error
       , data-easy
--       , basics -- must not be included, gives dependency issue
    main-is: TestingError.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
